[ plugin ] Able to locate the annotated var