@@ -27,6 +27,9 @@ tasks.withType<JavaCompile> {
             "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
 
             "--add-exports",
-            "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+            "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+
+            "--add-exports",
+            "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
     )
 }
